test/bad/res0.pacc
/*
nopacc 7:19 'expected Defns, or end-of-input'
*/

/* Results may once again appear only at the end of a sequence. */

S â† "foo" { 0 } "bar"
